# Actionsplane

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  mise.toml  plan.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile  docker-compose.full.yml  docker-compose.github-app.yml  docker-compose.record.yml  docker-compose.yml
deploy/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ingestor  Dockerfile.worker  (+1 more)
docs/: ARCHITECTURE.md  USER_GUIDE.md  architect-review-2026-07.md  directions-research.md  feature-research.md  k8s-architecture.md  memory.md  multi-ci-research.md  resume-chat.md  review-findings-2.md  review-findings.md  staff-review.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
migrations/: env.py
scripts/: prune_demo.py  seed_local.py
tests/: conftest.py  test_api_auth.py  test_api_endpoints_db.py  test_api_middleware.py  test_app_auth.py  test_audit_engine.py  test_campaign_service.py  test_cli_local.py  test_client_etag_backoff.py  test_concurrency.py  test_config_redis.py  test_deferred_payload.py  test_deprecation_radar.py  test_drift.py  test_drift_detail.py  test_event_bus.py  test_events.py  test_factory.py  test_factory_race.py  test_findings_scale.py  test_github_client.py  test_github_client_contract.py  test_gitlab_provider.py  test_immutable_pins.py  test_ingestor_hardening.py  test_installation_cache.py  test_lease.py  test_metrics.py  test_metrics_records.py  test_migrations.py  test_offline.py  test_operations.py  test_parser.py  test_pins.py  test_pipeline_status.py  test_pipelines_query.py  test_policy_simulator.py  test_property.py  test_rate_budget.py  test_recorder.py  (+17 more)
(+150 files in other folders)
