[project]
name = "actionsplane"
version = "0.0.0"
description = "Self-hosted control plane to observe, audit, and edit GitHub Actions across many repos"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Itamar" }]
keywords = ["github-actions", "platform-engineering", "supply-chain", "devops", "ci-cd"]
dependencies = [
    # API + ingestion
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    # GitHub
    "PyGithub>=2.5",
    "httpx>=0.28",            # GraphQL + raw REST where PyGithub is awkward
    # Workflow AST (round-trip preserves comments/formatting)
    "ruamel.yaml>=0.18",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    # Persistence
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",             # async task queue (chosen over RQ for async-native workers)
    # Crypto for GitHub App JWT + webhook HMAC
    "pyjwt[crypto]>=2.10",
    # CLI
    "typer>=0.15",
    "rich>=13.9",
    # Observability
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "hypothesis>=6.100",
    "ruff>=0.8",
]

[project.scripts]
actionsplane = "actionsplane.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actionsplane"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
